clusters/testnet/apps/exchange/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chart
  namespace: exchange
  labels:
    app: chart
spec:
  selector:
    app: chart
  ports:
  - name: http
    port: 80
    targetPort: ui
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: data-service-docs
  namespace: exchange
  labels:
    app: data-service-docs
spec:
  selector:
    app: data-service-docs
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: explorer
  namespace: exchange
  labels:
    app: explorer
spec:
  selector:
    app: explorer
  ports:
  - name: http
    port: 80
    targetPort: ui
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: exchange
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 11004
    targetPort: ui
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: wallet
  namespace: exchange
  labels:
    app: wallet
spec:
  selector:
    app: wallet
  ports:
  - name: http
    port: 80
    targetPort: ui
    protocol: TCP
  type: ClusterIP
